<resources>
    <string name="app_name">TCGBolivia</string>
    <!-- TODO: Remove or change this placeholder text -->
    <!-- activity Login -->
    <!-- saber si esta abierto o cerrado -->
    <string name="open">Open</string>
    <string name="close">Close</string>
    <!-- datos para pedir en el registro -->
    <string name="enter_first_name">Introduzca sus Nombres</string>
    <string name="enter_last_name">Introduzca su Apellidos</string>
    <!-- datos para el email  login,etc -->
    <string name="enter_email">Introduzca la dirección de correo electrónico</string>
    <string name="invalid_email">Correo electrónico ingresado no válido</string>
    <!-- datoos del password -->
    <string name="enter_password">Ingrese Contraseña</string>
    <string name="invalid_password">Tu contraseña debe contener mas de 8 caracteres</string>
    <string name="email_hint">Correo</string>
    <string name="password_hint">Contraseña</string>
    <string name="repassword_hint">Las Contraseñas no coinciden</string>
    <string name="forgot_password">Olvido su contraseña?Actualizela</string>
    <string name="forgot_password_hint">Agregue el correo y presione enviar</string>
    <!-- otros -->
    <string name="login">Ingresar</string>
    <string name="logout">Cerrar Sesion</string>
    <string name="send">Enviar</string>
    <string name="create_account">No tienes una cuenta? Registrate!</string>
    <string name="logindetail">Aplicacion para q lleves tu rutina al maximo</string>
    <string name="male">Hombre</string>
    <string name="female">Mujer</string>
    <string name="other">Otro</string>
    <string name="first_name_hint">nombres</string>
    <string name="last_name_hint">apellidos</string>
    <string name="birth_date_hint">fecha de nacimineto</string>
    <string name="phone_number_hint">Telefono</string>
    <string name="tituloregistro">Registro</string>
    <string name="detalleregistro">Rellene todos los datos</string>
    <string name="register_hint">Registrar</string>
    <string name="tituloforgotpass">Olvido su contraseña</string>
    <string name="detailforgotpass">agregue su correo y presione "Enviar"</string>
    <string name="enviarforgotpass">enviar mensaje</string>
    <string name="cel">telefono/celular</string>
    <string name="genero">genero</string>


    <!-- home -->
    <string name="homewelcome">Wellcome to</string>
    <string name="homename">TCGBolivia</string>
    <string name="homedata">COLLECT. TRACK. PROFIT</string>
    <string name="hometip1">Start building your Collecions!</string>
    <string name="hometip2">Before we can create any charts, well first need to get some products in here!</string>
    <string name="homebuttonadd">Add Products</string>
    <string name="homewant">Want to save your collection?</string>
    <string name="homebuttonregister">register or Login here</string>
    <!-- marketplace -->
    <string name="marketsearch">search</string>
    <string name="marketquick_filters">Quick Filters</string>
    <string name="market2search">Search</string>
    <string name="marketmarketplace">Marketplace</string>
    <!--menu-->
    <string name="menuhome">Home</string>
    <string name="menusearch">Search</string>
    <string name="menusocial">Social</string>
    <string name="menuportfolio">Portfolio</string>
    <string name="menuprofile">Profile</string>
    <!--social-->
    <string name="socialtext1">Its time to connect</string>
    <string name="sociallogin">Login</string>
    <string name="socialtext2">Login required for social access</string>
    <!--portfolio-->
    <string name="portfotext1">You have not added anything yet!</string>
    <string name="portfotext2">Lets get some products in here!</string>
    <string name="portfobuttonadd">Add Products</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_slider">SliderActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="lorem_ipsum">
        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam in scelerisque sem. Mauris
        volutpat, dolor id interdum ullamcorper, risus dolor egestas lectus, sit amet mattis purus
        dui nec risus. Maecenas non sodales nisi, vel dictum dolor. Class aptent taciti sociosqu ad
        litora torquent per conubia nostra, per inceptos himenaeos. Suspendisse blandit eleifend
        diam, vel rutrum tellus vulputate quis. Aliquam eget libero aliquet, imperdiet nisl a,
        ornare ex. Sed rhoncus est ut libero porta lobortis. Fusce in dictum tellus.\n\n
        Suspendisse interdum ornare ante. Aliquam nec cursus lorem. Morbi id magna felis. Vivamus
        egestas, est a condimentum egestas, turpis nisl iaculis ipsum, in dictum tellus dolor sed
        neque. Morbi tellus erat, dapibus ut sem a, iaculis tincidunt dui. Interdum et malesuada
        fames ac ante ipsum primis in faucibus. Curabitur et eros porttitor, ultricies urna vitae,
        molestie nibh. Phasellus at commodo eros, non aliquet metus. Sed maximus nisl nec dolor
        bibendum, vel congue leo egestas.\n\n
        Sed interdum tortor nibh, in sagittis risus mollis quis. Curabitur mi odio, condimentum sit
        amet auctor at, mollis non turpis. Nullam pretium libero vestibulum, finibus orci vel,
        molestie quam. Fusce blandit tincidunt nulla, quis sollicitudin libero facilisis et. Integer
        interdum nunc ligula, et fermentum metus hendrerit id. Vestibulum lectus felis, dictum at
        lacinia sit amet, tristique id quam. Cras eu consequat dui. Suspendisse sodales nunc ligula,
        in lobortis sem porta sed. Integer id ultrices magna, in luctus elit. Sed a pellentesque
        est.\n\n
        Aenean nunc velit, lacinia sed dolor sed, ultrices viverra nulla. Etiam a venenatis nibh.
        Morbi laoreet, tortor sed facilisis varius, nibh orci rhoncus nulla, id elementum leo dui
        non lorem. Nam mollis ipsum quis auctor varius. Quisque elementum eu libero sed commodo. In
        eros nisl, imperdiet vel imperdiet et, scelerisque a mauris. Pellentesque varius ex nunc,
        quis imperdiet eros placerat ac. Duis finibus orci et est auctor tincidunt. Sed non viverra
        ipsum. Nunc quis augue egestas, cursus lorem at, molestie sem. Morbi a consectetur ipsum, a
        placerat diam. Etiam vulputate dignissim convallis. Integer faucibus mauris sit amet finibus
        convallis.\n\n
        Phasellus in aliquet mi. Pellentesque habitant morbi tristique senectus et netus et
        malesuada fames ac turpis egestas. In volutpat arcu ut felis sagittis, in finibus massa
        gravida. Pellentesque id tellus orci. Integer dictum, lorem sed efficitur ullamcorper,
        libero justo consectetur ipsum, in mollis nisl ex sed nisl. Donec maximus ullamcorper
        sodales. Praesent bibendum rhoncus tellus nec feugiat. In a ornare nulla. Donec rhoncus
        libero vel nunc consequat, quis tincidunt nisl eleifend. Cras bibendum enim a justo luctus
        vestibulum. Fusce dictum libero quis erat maximus, vitae volutpat diam dignissim.
    </string>
    <!--profile-->


</resources>