<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/common_google_signin_btn_icon_dark"
        android:title="@string/menuhome" />

    <item
        android:id="@+id/navigation_marketplace"
        android:icon="@drawable/common_google_signin_btn_icon_dark"
        android:title="@string/menusearch" />


    <item
        android:id="@+id/navigation_social"
        android:icon="@drawable/common_google_signin_btn_icon_dark"
        android:title="@string/menusocial" />

    <item
        android:id="@+id/navigation_portfolio"
        android:icon="@drawable/common_google_signin_btn_icon_dark"
        android:title="@string/menuportfolio" />

    <item
        android:id="@+id/navigation_profile"
        android:icon="@drawable/common_google_signin_btn_icon_dark"
        android:title="@string/menuprofile" />

</menu>