<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.view.auth.RegisterFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInputLayoutEmail"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:hint="@string/email_hint"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            android:layout_marginBottom="16dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/email_et"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInputLayoutPassword"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:hint="@string/password_hint"
            app:layout_constraintStart_toStartOf="@id/textInputLayoutEmail"
            app:layout_constraintEnd_toEndOf="@id/textInputLayoutEmail"
            app:layout_constraintTop_toBottomOf="@id/textInputLayoutEmail"
            android:layout_marginBottom="16dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/pass_et"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInputLayoutFirstName"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:hint="@string/first_name_hint"
            app:layout_constraintStart_toStartOf="@id/textInputLayoutEmail"
            app:layout_constraintEnd_toStartOf="@id/textInputLayoutLastName"
            app:layout_constraintTop_toBottomOf="@id/textInputLayoutPassword"
            android:layout_marginBottom="16dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/first_name_et"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInputLayoutLastName"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:hint="@string/last_name_hint"
            app:layout_constraintStart_toEndOf="@id/textInputLayoutFirstName"
            app:layout_constraintEnd_toEndOf="@id/textInputLayoutEmail"
            app:layout_constraintTop_toTopOf="@id/textInputLayoutFirstName"
            android:layout_marginBottom="16dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/last_name_et"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInputLayoutPhone"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:hint="@string/cel"
            app:layout_constraintStart_toStartOf="@id/textInputLayoutFirstName"
            app:layout_constraintEnd_toEndOf="@id/textInputLayoutLastName"
            app:layout_constraintTop_toBottomOf="@id/textInputLayoutLastName"
            android:layout_marginBottom="16dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/phonenumber_et"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="phone" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInputLayoutBirthdate"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="@id/textInputLayoutPhone"
            app:layout_constraintEnd_toEndOf="@id/textInputLayoutPhone"
            app:layout_constraintTop_toBottomOf="@id/textInputLayoutPhone"
            android:layout_marginBottom="16dp">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/birth_date_hint"/>
            <CalendarView
                android:id="@+id/birthDateEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInputLayoutGender"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:hint="@string/genero"
            app:layout_constraintStart_toStartOf="@id/textInputLayoutBirthdate"
            app:layout_constraintEnd_toEndOf="@id/textInputLayoutBirthdate"
            app:layout_constraintTop_toBottomOf="@id/textInputLayoutBirthdate"
            android:layout_marginBottom="16dp">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/genero"/>

            <RadioGroup
                android:id="@+id/genderRadioGroup"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="horizontal">

                <RadioButton
                    android:id="@+id/maleRadioButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/male" />

                <RadioButton
                    android:id="@+id/femaleRadioButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/female" />

                <RadioButton
                    android:id="@+id/otherRadioButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/other" />

            </RadioGroup>

        </com.google.android.material.textfield.TextInputLayout>

        <!-- button to register user -->


        <RelativeLayout
            android:id="@+id/button_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="11dp"
            app:layout_constraintStart_toStartOf="@id/textInputLayoutGender"
            app:layout_constraintEnd_toEndOf="@id/textInputLayoutGender"
            app:layout_constraintTop_toBottomOf="@id/textInputLayoutGender">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/register_btn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/register_hint"
                android:textAllCaps="false" />

            <ProgressBar
                android:id="@+id/register_progress"
                style="?android:attr/progressBarStyle"
                android:layout_width="36dp"
                android:layout_height="36dp"
                android:layout_centerInParent="true"
                android:layout_marginTop="16dp"
                android:elevation="10dp"
                android:visibility="invisible" />

        </RelativeLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>





</ScrollView>